# Misago

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
frontend/: package.json  pnpm-lock.yaml
misago-admin/: package.json  pnpm-lock.yaml
