[tool.poetry]
name = "Misago"
version = "0.40.0"
authors = [
    "Rafał Pitoń <kontakt@rpiton.com>",
    "CEE <archmagece@users.noreply.github.com>",
]
description = "Misago is modern, fully featured forum application written in Python and ES6, powered by Django and React.js. It works out of the box and can be run alone or be connected to existing site with built in OAuth 2 client."
readme = "README.md"
license = "GPLv2"
homepage = "http://www.misago-project.org"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.12"
ariadne = "^0.23.0"
amqp = "5.2.0"
ariadne-django = "0.3.0"
black = "^24.3.0"
celery = { version = "5.3.6", extras = ["redis"] }
coveralls = "3.3.1"
django = "^5.0.3"
django-debug-toolbar = "4.3.0"
django-js-asset = "2.2.0"
django-mptt = "0.16.0"
django-simple-sso = "1.2.0"
djangorestframework = "^3.15.1"
faker = "^24.4.0"
graphql-core = "3.2.3"
html5lib = "1.1"
markdown = "^3.6"
pathspec = "0.12.1"
pillow = "10.2.0"
prompt-toolkit = "3.0.43"
psycopg = { version = "3.1.18", extras = ["binary"] }
pycparser = "2.21"
pygments = "2.17.2"
pyjwt = "2.8.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-django = "4.8.0"
pytest-mock = "^3.14.0"
python-dateutil = "^2.9.0.post0"
python3-openid = "3.2.0"
pytz = "2024.1"
pyyaml = "6.0.1"
social-auth-core = "^4.5.3"
syrupy = "4.6.1"
typing-extensions = "^4.10.0"
tzdata = "^2024.1"
unidecode = "1.3.8"
urllib3 = "^2.2.1"
social-auth-app-django = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
